--- a/arabic.html
+++ b/arabic.html
@@ -12,7 +12,7 @@
 	<br/>
 	<div class="panel light">
 		<h3>Basics</h3>
-		Arabic is read from Right To Left.
+		Arabic is read from Right To Left. The English pronunciation guides are still read Left to Right.
 	</div>
 	<div class="panel light">
 		<h3>Alphabet</h3>
@@ -51,6 +51,10 @@
 		<arabic>ﻫﻬﻪ ﻩ</arabic> Ha (ha from chest, like ha in ah-ha!)<br/>
 		<arabic>ﻮ ﻭ</arabic> Wow (like w in wow, or oo in poodle)<br/>
 		<arabic>ﻳﻴﻲ ﻱ</arabic> Ya (like y in yes, or i in bit, or ie in piece)<br/>
+		<br/>
+		<arabic>لا</arabic> combo letter lam-alif<br/>
+		<br/>
+		<arabic>ء</arabic> ?<br/>
 	</div>
 	<div class="panel light">
 		<h3>Diacritical Marks</h3>
@@ -73,7 +77,67 @@
 		<br/><br/>
 		<h3>Pronunciation</h3>
 		<div class='inline'><arabic>أَ</arabic> "ah"</div>
+		<div class='inline'><arabic>أ</arabic> "ah"</div>
+		<div class='inline'><arabic>حَ</arabic> "hah"</div>
+		<div class='inline'><arabic>رَ</arabic> "rah"</div>
+		<div class='inline'><arabic>مَ</arabic> "mah"</div>
+		<div class='inline'><arabic>لَ</arabic> "leh"</div>
+		<div class='inline'><arabic>وَ</arabic> "weh"</div>
 		<div class='inline'><arabic>اِ</arabic> "i" like bit</div>
+		<div class='inline'><arabic>بِ</arabic> "bi" like bit</div>
+		<div class='inline'><arabic>اً</arabic> "in"</div>
+		<div class='inline'><arabic>تٌ</arabic> "toon"</div>
+		<div class='inline'><arabic>دٌ</arabic> "doon"</div>
+		<div class='inline'><arabic>رْ</arabic> "are"</div>
+		<div class='inline'><arabic>مْ</arabic> "mm"</div>
+		<div class='inline'><arabic>نْ</arabic> "nn"</div>
+		<div class='inline'><arabic>إ</arabic> "eh"</div>
+	</div>
+	<div class="panel light">
+		<h3>Greetings</h3>
+		<div class='inline'><arabic>مَرْحَباً</arabic> mar-ha-bin</div>
+	</div>
+	<div class="panel light">
+		<h3>People Nouns</h3>
+		<div class='inline'><arabic>بِنْتٌ</arabic> bin-toon "girl"</div>
+		<div class='inline'><arabic>بَناتٌ</arabic> bi-neh-toon "girls"</div>
+		<div class='inline'><arabic>وَلَدٌ</arabic> well-eh-doon "boy"</div>
+		<div class='inline'><arabic>أوْلادٌ</arabic> al-leh-doon "boys"</div>
+		<div class='inline'><arabic>إمْرَأةٌ</arabic> em-rah-ah-doon "woman"</div>
+		<div class='inline'><arabic>نِساءٌ</arabic> nee-seh-oon "women"</div>
+		<div class='inline'><arabic>رَجُلٌ</arabic> reh-joo-loon "man"</div>
+		<div class='inline'><arabic>رِجالٌ</arabic> re-eh-jeh-loon "men"</div>
+	</div>
+	<div class="panel light">
+		<h3>Eats</h3>
+		<div class='inline'><arabic>البِنْتُ تَأكُلُ</arabic> al-bin-too tah-koo-loo "the girl eats"</div>
+		<div class='inline'><arabic>الوَلَدُ يَأكُلُ</arabic> al-well-eh-doo yeah-ka-loo "the boy eats"</div>
+		<div class='inline'><arabic>الأوْلارٔ يَأكُلونَ</arabic> el-oh-yeh-do yeah-koo-loo-nuh "the boys eat"</div>
+		<div class='inline'><arabic>اِلدْأةُ يَأكُلُ</arabic> al-mar-eho tah-koo-loo "the woman eats"</div>
+		<div class='inline'><arabic>الرَّجُلُ يَأكُلُ</arabic> are-joo-loo yeah-koo-loo "the man eats"</div>
+	</div>
+	<div class="panel light">
+		<h3>Drinks</h3>
+		<div class='inline'><arabic>البِنْتُ تَشْرَبُ</arabic> al-bin-too tesh-ur-ah-boo "the girl drinks"</div>
+		<div class='inline'><arabic>البَناتُ يَشْرَبْنَ</arabic> al-bi-neh-too yeah-shrub-nuh "the girls drink"</div>
+		<div class='inline'><arabic>الوَلَدُ يَشْرَبُ</arabic> al-well-eh-doo yeah-shar-uh-boo "the boy drinks"</div>
+		<div class='inline'><arabic>اِلدْأةُ تَشْرَبُ</arabic> al-mar-ah-too tesh-ur-ah-boo "the woman drinks"</div>
+		<div class='inline'><arabic>الرَّجُلُ يَشْرَبُ</arabic> al-rah-jah-yoo yeah-shar-uh-boo "the man drinks"</div>
+	</div>
+	<div class="panel light">
+		<h3>Runs</h3>
+		<div class='inline'><arabic>البِنْتُ يَجْري</arabic> al-bin-too teh-jur-ee "the girl runs"</div>
+		<div class='inline'><arabic>البَناتُ يَجْرينَ</arabic> al-bi-na-too yeah-jur-ee-nah "the girls run"</div>
+		<div class='inline'><arabic>الوَلَدُ يَجْري</arabic> al-weh-leh-doo yeh-jur-ee "the boy runs"</div>
+		<div class='inline'><arabic>اِلدْأةُ يَجْري</arabic> al-mar-ah-too teh-jur-ee "the woman runs"</div>
+		<div class='inline'><arabic>الرَّجُلُ يَجْري</arabic> al-rah-jah-yoo yeh-jur-ee "the man runs"</div>
+	</div>
+	<div class="panel light">
+		<h3>Reads</h3>
+		<div class='inline'><arabic>البِنْتُ تَقْرَأَ</arabic> al-bin-too tah-kar-ah-oh "the girl reads"</div>
+		<div class='inline'><arabic>الوَلَدُ يَقْرَأُ</arabic> al-weh-leh-doo yah-kar-ah-oh "the boy reads"</div>
+		<div class='inline'><arabic>اِلدْأةُ يَقْرَأُ</arabic> al-mar-ah-too tah-kar-ah-oh "the woman reads"</div>
+		<div class='inline'><arabic>الرَّجُلُ يَقْرَأُ</arabic> al-rah-jah-yoo yah-kar-ah-oh "the man reads"</div>
 	</div>
 </body>
 </html>
