--- a/arabic.html
+++ b/arabic.html
@@ -25,7 +25,7 @@
 		<br/><br/>
 		<arabic>ﺎ ا</arabic> Alif (ranges from e in bet, to a in father)<br/>
 		<arabic>ﺑﺒﺐ ﺐ</arabic> Ba (like b in bet)<br/>
-		<arabic>ﺗﺘﺖ ﺕ</arabic> Ta (like t in tip)<br/>
+		<arabic>ة ﺗﺘﺖ ﺕ</arabic> Ta (like t in tip)<br/>
 		<arabic>ﺛﺜﺚ ﺙ</arabic> Tha (like th in three - tongue starts between your teeth)<br/>
 		<arabic>ﺟﺠﺞ ﺝ</arabic> Jeem (like j or g, depending on region)<br/>
 		<arabic>ﺣﺤﺢ ﺡ</arabic> Hha (breathy ha)<br/>
@@ -86,7 +86,10 @@
 		<div class='inline'><arabic>اِ</arabic> "i" like bit</div>
 		<div class='inline'><arabic>بِ</arabic> "bi" like bit</div>
 		<div class='inline'><arabic>اً</arabic> "in"</div>
+		<div class='inline'><arabic>كُ</arabic> "ku"</div>
+		<div class='inline'><arabic>لُ</arabic> "lu"</div>
 		<div class='inline'><arabic>تٌ</arabic> "toon"</div>
+		<div class='inline'><arabic>ةٌ</arabic> "toon"</div>
 		<div class='inline'><arabic>دٌ</arabic> "doon"</div>
 		<div class='inline'><arabic>رْ</arabic> "are"</div>
 		<div class='inline'><arabic>مْ</arabic> "mm"</div>
