--- a/arabic.html
+++ b/arabic.html
@@ -105,7 +105,7 @@
 		<div class='inline'><arabic>بِنْتٌ</arabic> bin-toon "girl"</div>
 		<div class='inline'><arabic>بَناتٌ</arabic> bi-neh-toon "girls"</div>
 		<div class='inline'><arabic>وَلَدٌ</arabic> well-eh-doon "boy"</div>
-		<div class='inline'><arabic>أوْلادٌ</arabic> al-leh-doon "boys"</div>
+		<div class='inline'><arabic>أوْلادٌ</arabic> ow-leh-doon "boys"</div>
 		<div class='inline'><arabic>إمْرَأةٌ</arabic> em-rah-ah-doon "woman"</div>
 		<div class='inline'><arabic>نِساءٌ</arabic> nee-seh-oon "women"</div>
 		<div class='inline'><arabic>رَجُلٌ</arabic> reh-joo-loon "man"</div>
